# LangSmithLearn

./: .env  README.md  pyproject.toml  requirements.txt
intro-to-langsmith-main/: .env.example
testing/: conversational_threads.ipynb  function_rag_application.ipynb  simple_rag_application.ipynb
