[project]
name = "langchainlearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.17",
    "faiss-cpu>=1.12.0",
    "ipykernel",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-google-genai>=2.1.9",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-sdk>=0.2.0",
    "langsmith>=0.2.0",
    "lxml>=6.0.0",
    "nest-asyncio>=1.6.0",
    "notebook>=7.4.5",
    "pandas>=2.3.1",
    "protobuf==3.20.3",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.1",
]
